# AIAssistent

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.worker  LICENSE  Makefile  PLAN.md  README.md  docker-compose.amd-gpu.yml  docker-compose.host-gpu.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
api/openapi/: oapi-codegen.yaml  openapi.yaml
cmd/api/: main.go
cmd/eval/: main.go
cmd/worker/: main.go
db/migrations/: 001_init.sql  002_add_metadata.sql
deploy/ollama-host-proxy/: nginx.conf.template
deploy/openwebui/: Dockerfile
deploy/searxng/: limiter.toml  settings.yml
docs/: architecture.md
docs/adr/: 0001-clean-architecture-refactor.md  0002-agent-loop-memory.md
docs/c4/: README.md  c4-agent-loop.md  c4-containers.md  c4-context.md  c4-knowledge-graph.md  c4-mcp.md  c4-monitoring.md  c4-multi-agent.md  c4-obsidian.md  c4-rag-pipeline.md  c4-scheduled-tasks.md  c4-self-improvement.md  c4-tauri-ui.md
docs/evaluation/: advanced-retrieval.md  baseline.md
docs/specs/: level2_adaptive_routing.md  level2_auto_tagging.md  level2_knowledge_graph.md  level2_rag_evaluation.md  level3_multi_agent.md  level3_plugin_system.md  level3_scheduled_tasks.md  level3_self_improving.md  level4_edge_deployment.md  level4_finetuning.md  level4_vector_optimization.md
ui/: index.html  package-lock.json  package.json  tailwind.config.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: commands.rs  hotkeys.rs  lib.rs  main.rs  tray.rs
(+434 files in other folders)
