[package]
name = "paa-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "paa_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
chrono = "0.4"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
